--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "ember-cli": "~3.9.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^4.2.3",
+    "ember-cli-fastboot": "^2.0.4",
+    "ember-cli-fastboot-testing": "^0.0.16",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
