--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ember-cli-inject-live-reload": "~2.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^2.1.0",
+    "ember-cli-uglify": "~3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "~2.0.0",
@@ -44,8 +44,8 @@
     "ember-qunit": "~4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.10.0",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0",
+    "ember-source-channel-url": "~2.0.1",
+    "ember-try": "~1.2.1",
     "ember-welcome-page": "~4.0.0",
     "eslint-plugin-ember": "~6.4.1",
     "eslint-plugin-node": "~9.0.1",
