--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "ember-cli-htmlbars": "^4.0.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "~1.1.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.13.1",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-dependency-checker": "~3.2.0",
     "ember-cli-eslint": "~5.1.0",
-    "ember-cli-fastboot": "^2.0.4",
-    "ember-cli-fastboot-testing": "^0.0.16",
-    "ember-cli-inject-live-reload": "~2.0.1",
+    "ember-cli-fastboot": "~2.2.1",
+    "ember-cli-fastboot-testing": "~0.2.3",
+    "ember-cli-inject-live-reload": "~2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "~3.0.0",
